# pointage_analyser

./: .gitignore  README.md  app.py  inspect_all_output.txt  inspect_all_sheets.py  inspect_data.py  inspect_joins.py  inspect_joins_output.txt  inspect_keys.py  inspect_keys_output.txt  inspect_output.txt  pip_list.txt  pyproject.toml  requirements.txt  smoke_test.py
dashboard/: __init__.py  analytics.py  visualizations.py
models/: .gitkeep
scoring/: __init__.py  dataset_builder.py  feature_engineering.py  ml_model.py  preprocess.py  rule_engine.py  scorer.py
src/pointage_analyzer/: __init__.py
src/pointage_analyzer/core/: __init__.py  config.py
src/pointage_analyzer/dashboard/: __init__.py  analytics.py  app.py  efficience.py  exhaustivite.py  productivite.py  techniciens.py  visualizations.py
src/pointage_analyzer/engine/: __init__.py  ml_model.py  rule_engine.py  scorer.py
src/pointage_analyzer/ingestion/: __init__.py  preprocessor.py
src/pointage_analyzer/pipeline/: __init__.py  dataset_builder.py  efficience_builder.py  exhaustivite_builder.py  feature_engineering.py  productivite_builder.py
src/pointage_analyzer/utils/: senegal_holidays.py
